--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,7 +11,8 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
-      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
+      <!-- <a href="index.html" class="btn" id="leave-btn">Leave Room</a> -->
+      <button type="button" class="btn" style="background-color:red; color:white;" onclick="leaveRoom()">Leave Room</button>
     </header>
 
     <main class="chat-main">
@@ -31,10 +32,11 @@
           id="msg"
           type="text"
           placeholder="Type a Message"
+          value=""
           required
           autocomplete="off"
         />
-        <button class="btn-plane"><i class="fas fa-paper-plane"></i> </button>
+        <button class="btn-plane" onclick="sendMsg(form.msg.value);return false;"><i class="fas fa-paper-plane"></i> </button>
       </form>
     </div>
   </div>
@@ -45,6 +47,6 @@
     crossorigin="anonymous"
   ></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/chat.js"></script>
 </body>
 </html>
