--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,14 +19,19 @@
 			<header class="join-header">
 				<h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
 			</header>
+
+
+
+
 			<main class="join-main">
-				<form action="chat.html">
+				<form action="">
           <div class="form-control">
 						<label for="email">Email Address</label>
 						<input
 							type="email"
 							name="email"
 							id="email"
+							value=""
 							placeholder="Enter email address..."
 							required
 						/>
@@ -38,13 +43,14 @@
 							type="text"
 							name="username"
 							id="username"
+							value=""
 							placeholder="Enter username..."
 							required
 						/>
 					</div>
 					<div class="form-control">
 						<label for="room">Chat Channel</label>
-						<select name="room" id="room">
+						<select name="room" id="room" value="">
 							<option value="Business">Business </option>
 							<option value="Technology">Technology</option>
 							<option value="Sport">Sports</option>
@@ -53,10 +59,15 @@
 						</select>
 					</div>
           <div class="flex">
-            <button type="submit" class="btn">Login to Chat</button>
+            <button type="button" class="btn" onclick="joinRoom(form)">Login to Chat</button>
           </div>
 				</form>
 			</main>
+
+
+
+
 		</div>
+		<script src="js/home.js"></script>
 	</body>
 </html>
