--- a/app/client/templates/chat.ejs
+++ b/app/client/templates/chat.ejs
@@ -5,16 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>WebCage Chat App</title>
+  <title>NodeJS Chat App</title>
 </head>
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
-      <!-- <a href="index.html" class="btn" id="leave-btn">Leave Room</a> -->
+      <h1><img src="img/logo.jpg" alt="Paris" style="height:auto; width:5.5%"> NodeJS Chat App </h1>
       <button type="button" class="btn" style="background-color:red; color:white;" onclick="leaveRoom()">Leave Room</button>
     </header>
-
     <main class="chat-main">
       <div class="chat-sidebar">
         <h2 id="room-name"></h2>
@@ -25,7 +23,6 @@
       <div class="chat-messages">
       </div>
     </main>
-    
     <div class="feedback"></div>
     <div class="chat-form-container">
       <form id="chat-form">
@@ -43,7 +40,6 @@
       </form>
     </div>
   </div>
-
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
     integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
