--- a/app/client/templates/home.ejs
+++ b/app/client/templates/home.ejs
@@ -17,12 +17,8 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
+				<h1><img src="img/logo.jpg" alt="Paris" style="height:auto; width:6.5%"> NodeJS Chat App </h1>
 			</header>
-
-
-
-
 			<main class="join-main">
 				<form action="">
           <div class="form-control">
@@ -36,7 +32,6 @@
 							required
 						/>
 					</div>
-
 					<div class="form-control">
 						<label for="username">Username</label>
 						<input
@@ -63,10 +58,6 @@
           </div>
 				</form>
 			</main>
-
-
-
-
 		</div>
 		<script src="js/home.js"></script>
 	</body>
