--- a/app/client/templates/home.ejs
+++ b/app/client/templates/home.ejs
@@ -1,4 +1,3 @@
-<!-- INSPIRED BY BRAD TRAVERSY CHAT APP -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -12,7 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>WebCage Chat App</title>
+		<title>NodeJS Chat App</title>
 	</head>
 	<body>
 		<div class="join-container">
@@ -21,17 +20,6 @@
 			</header>
 			<main class="join-main">
 				<form action="">
-          <div class="form-control">
-						<label for="email">Email Address</label>
-						<input
-							type="email"
-							name="email"
-							id="email"
-							value=""
-							placeholder="Enter email address..."
-							required
-						/>
-					</div>
 					<div class="form-control">
 						<label for="username">Username</label>
 						<input
