--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -9,7 +9,7 @@
 :root {
 	--dark-color-a: #003638;
 	--dark-color-b: #055052;
-	--light-color-b: #53B8BB;
+	--light-color-b: #FFAD81;
 	--light-color: #F3F2C9;
 	
 	--success-color: #65ce65;
