--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -90,7 +90,7 @@ a {
 	background: var(--dark-color-b);
 	color: white;
 	padding: 20px 20px 60px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .chat-sidebar h2 {
@@ -128,7 +128,7 @@ a {
 .chat-messages {
 	padding: 30px;
 	max-height: 500px;
-	overflow-y: scroll;
+	overflow-y: auto;
     background-image: url('../img/chat-bg.jpg');
     background-position: center;
     background-size: contain;
