--- a/app/client/templates/chat.ejs
+++ b/app/client/templates/chat.ejs
@@ -16,7 +16,7 @@
     <main class="chat-main">
       <div class="chat-sidebar">
         <h2 id="room-name"></h2>
-        <h3><i class="fas fa-user"></i> Online</h3>
+        <h3><i class="fas fa-user"></i> Online Users</h3>
         <ul id="users">
         </ul>
       </div>
