--- a/app/client/templates/chat.ejs
+++ b/app/client/templates/chat.ejs
@@ -41,11 +41,10 @@
       </form>
     </div>
   </div>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
-    integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
-    crossorigin="anonymous"
-  ></script>
+  <script>
+    var username = <%- JSON.stringify(username) %>;
+    var room = <%- JSON.stringify(room) %>;
+  </script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/chat.js"></script>
   <script src="js/utils.js"></script>
