changed name of feedback div

--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -273,7 +273,7 @@ i.fas.fa-paper-plane{
     font-family: 'OpenSans';
 }
 
-.feedback {
+.typing-status {
 	color: white;
 	background-color: #630000;
 	text-align: right;
