--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -23,7 +23,7 @@
       <div class="chat-messages">
       </div>
     </main>
-    <div class="feedback"></div>
+    <div class="typing-status"></div>
     <div class="chat-form-container">
       <form id="chat-form">
         <input
