--- a/app/client/views/home.ejs
+++ b/app/client/views/home.ejs
@@ -32,7 +32,7 @@
 						/>
 					</div>
 					<div class="form-control">
-						<label for="room">Chat Channel</label>
+						<label for="room">Chat Room</label>
 						<select name="room" id="room" value="">
 							<option value="Business">Business </option>
 							<option value="Technology">Technology</option>
