--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -10,7 +10,7 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><img src="img/logo.jpg" alt="Paris" style="height:auto; width:5.5%"> NodeJS Chat App </h1>
+      <h1><img src="img/logo.jpg" alt="NodeJSChatApp"> NodeJS Chat App </h1>
       <button type="button" class="btn leave-room" onclick="leaveRoom()">Leave Room</button>
     </header>
     <main class="chat-main">
@@ -30,7 +30,7 @@
           id="msg"
           class="msg-input"
           type="text"
-          placeholder="Type a Message"
+          placeholder="Type a Message..."
           value=""
           required
           autocomplete="off"
