--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -36,8 +36,9 @@
           autocomplete="off"
           onkeypress="typing(event)"
           onkeyup="doneTyping()"
+          autofocus
         />
-        <button class="btn-plane" onclick="sendMsg(form.msg.value);return false;"><i class="fas fa-paper-plane"></i> </button>
+        <button class="btn-plane" onclick="sendMessage(form.msg.value);return false;"><i class="fas fa-paper-plane"></i> </button>
       </form>
     </div>
   </div>
