--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -11,7 +11,7 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1><img src="img/logo.jpg" alt="NodeJSChatApp"> NodeJS Chat App </h1>
-      <button type="button" class="btn leave-room" onclick="leaveRoom()">Leave Room</button>
+      <button type="button" class="btn leave-room" onclick="leaveRoom()"><i class="fas fa-sign-out-alt"></i> Leave Room</button>
     </header>
     <main class="chat-main">
       <div class="chat-sidebar">
@@ -45,8 +45,6 @@
   <script>
     // Don't show typing status div when the page loads/reloads
     document.querySelector('.typing-status').style.display = "none";
-    var username = <%- JSON.stringify(username) %>;
-    var room = <%- JSON.stringify(room) %>;
   </script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/chat.js"></script>
