--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -11,7 +11,7 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1><img src="img/logo.jpg" alt="NodeJSChatApp"> NodeJS Chat App </h1>
-      <button type="button" class="btn leave-room" onclick="leaveRoom()"><i class="fas fa-sign-out-alt"></i> Leave Room</button>
+      <button type="button" class="btn leave-room" onclick="exitRoom()"><i class="fas fa-sign-out-alt"></i> Exit Room</button>
     </header>
     <main class="chat-main">
       <div class="chat-sidebar">
