--- a/app/client/views/chat.ejs
+++ b/app/client/views/chat.ejs
@@ -10,7 +10,7 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><img src="img/logo.jpg" alt="NodeJSChatApp"> NodeJS Chat App </h1>
+      <h1><a href="/"><img src="img/logo.jpg" alt="NodeJSChatApp" /></a> NodeJS Chat App </h1>
       <button type="button" class="btn leave-room" onclick="exitRoom()"><i class="fas fa-sign-out-alt"></i> Exit Room</button>
     </header>
     <main class="chat-main">
