--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -122,11 +122,11 @@ a {
 
 .chat-messages {
 	padding: 30px;
-	max-height: 500px;
+	/* max-height: 500px; */
 	overflow-y: auto;
-    background-image: url('../img/chat-bg.jpg');
     background-position: center;
     background-size: contain;
+	background-color: #f3f3e5;
 }
 
 .chat-messages .message {
